configurando autenticação e autorização

--- a/appsettings.json
+++ b/appsettings.json
@@ -5,5 +5,11 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "JwtBearerTokenSettings": {
+    "SecretKey": "A@fderwfQQSDXCCer3465165451651141654654",
+    "Audience": "https://localhost:44322/",
+    "Issuer": "IWantAppIssuer",
+    "ExpiryTimeInSeconds":  60
+  }
 }
