--- a/IWantApp.csproj
+++ b/IWantApp.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
@@ -7,6 +7,22 @@
     <InvariantGlobalization>false</InvariantGlobalization>
   </PropertyGroup>
 
+  <ItemGroup>
+	  <Using Include="Flunt.Notifications"/>
+	  <Using Include="Microsoft.EntityFrameworkCore"/>
+	  <Using Include="Microsoft.AspNetCore.Identity"/>
+	  <Using Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore"/>
+	  <Using Include="Microsoft.AspNetCore.Mvc"/>
+	  <Using Include="Microsoft.AspNetCore.Authorization"/>
+	  <Using Include="System.Security.Claims"/>
+	  <Using Include="Microsoft.AspNetCore.Authentication.JwtBearer"/>
+	  <Using Include="Microsoft.IdentityModel.Tokens"/>
+	  <Using Include="System.Text"/>
+
+	  <Using Include="IWantApp.Domain.Products"/>
+	  <Using Include="IWantApp.Infra.Data"/>
+  </ItemGroup>	
+	
   <ItemGroup>
     <PackageReference Include="Dapper" Version="2.1.28" />
     <PackageReference Include="Flunt" Version="2.0.5" />
