--- a/IWantApp.csproj
+++ b/IWantApp.csproj
@@ -8,19 +8,19 @@
   </PropertyGroup>
 
   <ItemGroup>
-	  <Using Include="Flunt.Notifications"/>
-	  <Using Include="Microsoft.EntityFrameworkCore"/>
-	  <Using Include="Microsoft.AspNetCore.Identity"/>
-	  <Using Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore"/>
-	  <Using Include="Microsoft.AspNetCore.Mvc"/>
-	  <Using Include="Microsoft.AspNetCore.Authorization"/>
-	  <Using Include="System.Security.Claims"/>
-	  <Using Include="Microsoft.AspNetCore.Authentication.JwtBearer"/>
-	  <Using Include="Microsoft.IdentityModel.Tokens"/>
-	  <Using Include="System.Text"/>
+	  <Using Include="Flunt.Notifications" />
+	  <Using Include="Microsoft.EntityFrameworkCore" />
+	  <Using Include="Microsoft.AspNetCore.Identity" />
+	  <Using Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" />
+	  <Using Include="Microsoft.AspNetCore.Mvc" />
+	  <Using Include="Microsoft.AspNetCore.Authorization" />
+	  <Using Include="System.Security.Claims" />
+	  <Using Include="Microsoft.AspNetCore.Authentication.JwtBearer" />
+	  <Using Include="Microsoft.IdentityModel.Tokens" />
+	  <Using Include="System.Text" />
 
-	  <Using Include="IWantApp.Domain.Products"/>
-	  <Using Include="IWantApp.Infra.Data"/>
+	  <Using Include="IWantApp.Domain.Products" />
+	  <Using Include="IWantApp.Infra.Data" />
   </ItemGroup>	
 	
   <ItemGroup>
@@ -33,6 +33,8 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.2" />
+    <PackageReference Include="Serilog.AspNetCore" Version="8.0.1" />
+    <PackageReference Include="Serilog.Sinks.MSSqlServer" Version="6.6.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
   </ItemGroup>
 
